Fri Aug 05 11:49:17 GMT 2011  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* common/pretty.h: Don't dereference a NULL pointer.
	* common/output.h,common/pretty.h: Fix invalid templates in pretty.h.
	* common/pretty.h: Fix template for pretty printing a std::list.

Fri Aug 05 11:36:10 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* include/xapian/enquire.h: Fix doc comment typo which reversed the
	  intended sense.

Fri Aug 05 11:30:13 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* api/omenquire.cc,common/omenquireinternal.h: Remove unused method
	  Enquire::Internal::register_match_decider().

Wed Jun 22 16:41:57 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* common/databasereplicator.h,languages/steminternal.h,tests/harness/:
	  Remove inclusions of xapian/base.h from files which don't use
	  RefCntPtr or RefCntBase.

Wed Jun 22 15:38:00 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* include/xapian/base.h: Remove unnecessary check for self-assignment
	  as it isn't a common case and the current code copes gracefully with
	  it anyway.

Wed Jun 22 14:59:22 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* backends/brass/brass_postlist.cc,backends/brass/brass_postlist.h,
	  backends/chert/chert_postlist.cc,backends/chert/chert_postlist.h:
	  Reduce size of BrassPostList/ChertPostList objects by moving bool
	  members together (168->160 bytes for ChertPostList on x86-64 Linux).

Wed Jun 22 14:20:48 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/internaltest.cc: Fix typo in comment and verbose output.

Wed Jun 22 14:18:31 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* common/pretty.h: Fix comment typo.

Wed Jun 22 14:17:21 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* queryparser/queryparser.lemony,